# sys-con

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Troubleshooting.md  sys-con.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
common/config/sys-con/: config_generic.ini  config_xbox360.ini  config_xboxorig.ini
doc/: ReverseEngineerUSB.md  SimulateController.md  TestedControllers.md  Troubleshooting.md  WiresharkCapture.md
doc/wireshark/: 8BitDo Ultimate C 2.4g Wireless Controller - NOK.pcapng  8BitDo Ultimate C 2.4g Wireless Controller - Xinput - Dongle.pcapng  8BitDo Ultimate C 2.4g Wireless Controller - Xinput - Wired.pcapng  8bitdo_lite_se_usb.pcapng  Atomic PSX-PS2 adapter - OK (USB1.1).pcapng  Switch Pro wired.pcap  XBOX360 - Official.pcapng  XBOXOne - PDP Titanfall 2.pcapng  XBOXOne - PDP Wave Afterglow.pcapng  XBOXOne - PlusZero - OK.pcap  Y3 (GameStick) Joypad or Arcade Fighter Stick - OK.pcapng  Y3 Joypad (Receiver YC5) - NOK (USB1.1).pcapng
source/: Makefile  README.md
source/AppletCompanion/source/: main.cpp
source/ControllerLib/: CMakeLists.txt  ControllerConfig.h  ControllerErrors.h  ControllerResult.h  ControllerTypes.h  Controllers.h  IController.h  ILogger.h  IUSBDevice.h  IUSBEndpoint.h  IUSBInterface.h  Result.h
source/ControllerLib/Controllers/: BaseController.cpp  BaseController.h  Dualshock3Controller.cpp  Dualshock3Controller.h  Dualshock4Controller.cpp  Dualshock4Controller.h  GenericHIDController.cpp  GenericHIDController.h  SwitchController.cpp  SwitchController.h  Xbox360Controller.cpp  Xbox360Controller.h  Xbox360WirelessController.cpp  Xbox360WirelessController.h  XboxController.cpp  XboxController.h  XboxOneController.cpp  XboxOneController.h
source/ControllerSwitch/: SwitchAbstractedPadHandler.cpp  SwitchAbstractedPadHandler.h  SwitchHDLHandler.cpp  SwitchHDLHandler.h  SwitchLogger.h  SwitchUSBDevice.cpp  SwitchUSBDevice.h  SwitchUSBEndpoint.cpp  SwitchUSBEndpoint.h  SwitchUSBInterface.cpp  SwitchUSBInterface.h  SwitchUSBLock.cpp  SwitchUSBLock.h  SwitchVirtualGamepadHandler.cpp  SwitchVirtualGamepadHandler.h
source/Ini/: ini.c  ini.h
source/Sysmodule/: CMakeLists.txt  Makefile  sys-con.json
source/Sysmodule/source/: config_handler.cpp  config_handler.h  controller_handler.cpp  controller_handler.h  log.cpp  log.h  logger.cpp  logger.h  main.cpp  psc_module.cpp  psc_module.h  usb_module.cpp  usb_module.h  version.h
tests/: CMakeLists.txt  test_configuration.cpp  test_controller_dualshock3.cpp  test_controller_switch.cpp  test_controller_xboxone.cpp  test_deadzone.cpp  test_input_binding.cpp  test_normalize.cpp
tests/mocks/: Device.h  Logger.h  USBEndpoint.h  USBInterface.h
